--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <!--===== External css file link start  =====-->
     <link rel="stylesheet" href="./css-styles/style.css">
+    <link rel="stylesheet" href="./css-styles/mobile.css">
     <!--===== External css file link end  =====-->
 </head>
 
